--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "node": ">=4.0.0"
   },
   "scripts": {
-    "start": "nodemon ./server/app.js",
-    "start:e`s6`": "npx babel-node ./server/app.js",
+    "start": "node ./server/app.js",
+    "start:es6": "npx babel-node ./server/app.js",
     "test": "jest",
     "lint": "eslint ./"
   },
@@ -20,7 +20,6 @@
     "express": "4.17.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.22",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
